--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -112,7 +112,7 @@
         <p>
           온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
         </p>
-        <p><strong>대상고객:</strong> 은행권에서 더이상 한도가 없거나, 추가 자금이 필요한 개인</p>
+        <p><strong>대상고객:</strong> 은행권에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
         <p><strong>대출한도:</strong> 1천만원 ~ 70억원</p>
         <p><strong>대출약정:</strong> 대면 또는 비대면(업체별 상이)</p>
         <p><strong>대출금리:</strong> 최저 6% ~ 최대 15.5%</p>
