--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
@@ -118,10 +118,13 @@
         <p><strong>대출금리:</strong> 최저 6% ~ 최대 15.5%</p>
         <p><strong>플랫폼수수료:</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
-        <p class="hero-summary-note">
-          *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
-          (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
-        </p>
+       <p class="hero-summary-note hero-note-main">
+  *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+</p>
+<p class="hero-summary-note hero-note-sub">
+  (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
+</p>
+
       </article>
     </section>
 
