--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
@@ -12,22 +12,32 @@
 
   <!-- 이 페이지 전용 보조 스타일: 가독성(줄간격·여백·칩 버튼) 개선 -->
   <style>
-   .hero-summary-note{
-  font-size:11px;
-  color:#6b7280;
-  line-height:1.5;
-  margin:0;            /* 기본은 여백 0 */
-}
+    /* 히어로 카드 내 요약 문구 (두 줄짜리 안내) */
+    .hero-summary-note{
+      font-size:11px;
+      color:#6b7280;
+      line-height:1.5;
+    }
+    /* product-info-card 공통 p 스타일보다 특이도를 높여서 margin을 0으로 강제 */
+    .product-info-card p.hero-summary-note{
+      margin-top:0;
+      margin-bottom:0;
+    }
+    /* 첫 번째 문장만 위쪽에 약간 여백 */
+    .hero-note-main{
+      margin-top:8px;
+    }
+    /* 두 번째 문장은 바로 붙게 (위 여백 없음) */
+    .hero-note-sub{
+      margin-top:0;
+    }
 
-/* 첫 번째 문장만 위쪽에 약간 여백 */
-.hero-note-main{
-  margin-top:8px;
-}
-
-/* 두 번째 문장은 바로 붙게 */
-.hero-note-sub{
-  margin-top:0;
-}
+    /* 히어로 첫 문단(소개 문장)만 글자 크기 20% 키움 */
+    .hero-intro{
+      font-size:15.6px;   /* 기본 13px 대비 약 20% ↑ */
+      line-height:1.7;
+      margin:0 0 8px;
+    }
 
     /* 카드 전체 타이포 & 여백 살짝 키우기 */
     .product-info-card{
@@ -54,24 +64,24 @@
       gap:16px;
     }
 
-   /* 하단 뒤로가기 칩 버튼 */
-.back-chip{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  padding:6px 14px;
-  border-radius:999px;
-  background:#111827;      /* 검정에 가까운 진한 색 */
-  border:1px solid #111827;
-  color:#ffffff;           /* 텍스트 흰색 */
-  font-size:12px;
-  font-weight:700;
-  text-decoration:none;
-  line-height:1;
-}
-.back-chip:hover{
-  background:#1f2937;      /* 살짝 더 밝은 톤으로 호버 */
-}
+    /* 하단 뒤로가기 칩 버튼 */
+    .back-chip{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding:6px 14px;
+      border-radius:999px;
+      background:#111827;      /* 검정에 가까운 진한 색 */
+      border:1px solid #111827;
+      color:#ffffff;           /* 텍스트 흰색 */
+      font-size:12px;
+      font-weight:700;
+      text-decoration:none;
+      line-height:1;
+    }
+    .back-chip:hover{
+      background:#1f2937;      /* 살짝 더 밝은 톤으로 호버 */
+    }
   </style>
 </head>
 <body class="beta-body">
@@ -119,7 +129,7 @@
 
       <!-- 히어로 내용을 하나의 카드 안에 정리 -->
       <article class="product-info-card">
-        <p>
+        <p class="hero-intro">
           온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
         </p>
         <p><strong>대상고객:</strong> 은행권에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
@@ -128,12 +138,12 @@
         <p><strong>대출금리:</strong> 최저 6% ~ 최대 15.5%</p>
         <p><strong>플랫폼수수료:</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
-       <p class="hero-summary-note hero-note-main">
-       *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
-       </p>
-       <p class="hero-summary-note hero-note-sub">
-       (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
-       </p>
+        <p class="hero-summary-note hero-note-main">
+          *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
+        </p>
+        <p class="hero-summary-note hero-note-sub">
+          (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
+        </p>
       </article>
     </section>
 
@@ -267,7 +277,7 @@
       </div>
     </section>
 
-    <!-- 담보대출계산기 안내 (제목/본문 수정) -->
+    <!-- 담보대출계산기 안내 -->
     <section class="products-section">
       <h2 class="products-section__title">후추 담보대출계산기로 확인하세요.</h2>
       <article class="product-info-card">
@@ -288,7 +298,7 @@
       </article>
     </section>
 
-    <!-- 해시태그: 계산기 안내와 뒤로가기 버튼 사이 -->
+    <!-- 해시태그 -->
     <section class="products-section">
       <div class="product-card__tags">
         <span class="product-tag">#아파트대출</span>
