--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -12,25 +12,40 @@
 
   <!-- 이 페이지 전용 보조 스타일: 가독성(줄간격·여백·칩 버튼) 개선 -->
   <style>
-    /* 히어로 요약 문구 두 줄 */
+    /* 히어로 카드 안 제목 */
+    .hero-card__title{
+      margin:0 0 10px;
+      font-size:24px;        /* 기본 h1(22px) 보다 약간 크게 */
+      font-weight:800;
+      color:#111827;
+    }
+
+    /* 히어로 카드 전체 */
+    .hero-card{
+      /* 기존 product-info-card 스타일을 그대로 상속 + 필요시 추가 여백만 조정 가능 */
+    }
+
+    /* 히어로 카드의 첫 문장만 글자 키우기 (약 20% 증가) */
+    .hero-card .hero-intro{
+      font-size:15px;        /* 기본 13px → 15px 정도로 업 */
+      font-weight:500;
+    }
+
+    /* 히어로 하단 주석 두 줄 붙여 보이게 */
     .hero-summary-note{
       font-size:11px;
       color:#6b7280;
       line-height:1.5;
-    }
-    /* product-info-card 공통 p보다 특이도 높여서 margin 0으로 고정 */
-    .product-info-card p.hero-summary-note{
-      margin-top:0;
-      margin-bottom:0;
+      margin:0;              /* 기본은 여백 0 */
     }
     .hero-note-main{
-      margin-top:8px;
+      margin-top:8px;        /* 첫 줄만 위쪽 여백 */
     }
     .hero-note-sub{
-      margin-top:0;
+      margin-top:0;          /* 둘째 줄은 바로 붙게 */
     }
 
-    /* 카드 전체 타이포 & 여백 */
+    /* 카드 전체 타이포 & 여백 살짝 키우기 */
     .product-info-card{
       padding:16px 18px 18px;
       font-size:13px;
@@ -50,12 +65,6 @@
       margin-top:2px;
     }
 
-    /* 히어로 첫 문단만 글자 20% 키우기 (공통 p 규칙 뒤에서 덮어씀) */
-    .product-info-card p.hero-intro{
-      font-size:15.6px;   /* 13px 대비 약 20% 증가 */
-      margin:0 0 8px;
-    }
-
     /* FAQ / “온투업을 찾는 경우” 카드 사이 간격 */
     .products-info-grid{
       gap:16px;
@@ -68,16 +77,16 @@
       justify-content:center;
       padding:6px 14px;
       border-radius:999px;
-      background:#111827;
+      background:#111827;      /* 검정에 가까운 진한 색 */
       border:1px solid #111827;
-      color:#ffffff;
+      color:#ffffff;           /* 텍스트 흰색 */
       font-size:12px;
       font-weight:700;
       text-decoration:none;
       line-height:1;
     }
     .back-chip:hover{
-      background:#1f2937;
+      background:#1f2937;      /* 살짝 더 밝은 톤으로 호버 */
     }
   </style>
 </head>
@@ -122,10 +131,10 @@
 
     <!-- 히어로 영역 -->
     <section class="products-hero">
-      <h1 class="products-hero__title">아파트 – 일반담보대출</h1>
-
       <!-- 히어로 내용을 하나의 카드 안에 정리 -->
-      <article class="product-info-card">
+      <article class="product-info-card hero-card">
+        <h1 class="hero-card__title">아파트 – 일반담보대출</h1>
+
         <p class="hero-intro">
           온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
         </p>
@@ -243,8 +252,6 @@
           </p>
           <p>
             기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
-          </p>
-          <p>
             보통 아파트의 경우는 KB시세, 빌라/연립의 경우 하우스머치가 적용됩니다.
           </p>
           <p>
@@ -300,7 +307,7 @@
       </article>
     </section>
 
-    <!-- 해시태그 -->
+    <!-- 해시태그: 계산기 안내와 뒤로가기 버튼 사이 -->
     <section class="products-section">
       <div class="product-card__tags">
         <span class="product-tag">#아파트대출</span>
