--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -44,6 +44,7 @@
     .hero-card .hero-intro{
       font-size:15px;        /* 기본 13px → 15px */
       font-weight:500;
+       margin-bottom:14px;
     }
 
     /* 히어로 하단 주석 두 줄 — p 기본 마진을 다시 덮어쓰기 */
