--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -10,9 +10,39 @@
 
   <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
 
-  <!-- 이 페이지 전용 보조 스타일: 가독성(줄간격·여백·칩 버튼) 개선 -->
+  <!-- 이 페이지 전용 보조 스타일 -->
   <style>
-    /* 카드 전체 타이포 & 여백 살짝 키우기 */
+    /* 히어로 카드 내 안내 문구 두 줄 */
+    .hero-summary-note{
+      font-size:11px;
+      color:#6b7280;
+      line-height:1.5;
+      margin:0;
+    }
+    .hero-note-main{
+      margin-top:8px;
+    }
+    .hero-note-sub{
+      margin-top:0;
+    }
+
+    /* 히어로 카드 – 제목 & 본문 간격 */
+    .hero-card{
+      padding:16px 18px 18px;
+    }
+    .hero-card h2{
+      margin:0 0 10px;
+      font-size:18px;
+      font-weight:800;
+      color:#111827;
+    }
+    .hero-card .hero-intro{
+      font-size:15px;
+      font-weight:500;
+      margin-bottom:14px;   /* 제목과 아래 항목 사이 간격 */
+    }
+
+    /* 공통 카드 타이포 & 여백 */
     .product-info-card{
       padding:16px 18px 18px;
       font-size:13px;
@@ -32,36 +62,7 @@
       margin-top:2px;
     }
 
-    /* 히어로 카드 제목(H1) */
-    .hero-card__title{
-      margin:0 0 10px;
-      font-size:24px;        /* 기본보다 약간 크게 */
-      font-weight:800;
-      color:#111827;
-    }
-
-    /* 히어로 카드의 첫 문장만 글자 20% 정도 키우기 */
-    .hero-card .hero-intro{
-      font-size:15px;        /* 기본 13px → 15px */
-      font-weight:500;
-       margin-bottom:14px;
-    }
-
-    /* 히어로 하단 주석 두 줄 — p 기본 마진을 다시 덮어쓰기 */
-    .product-info-card p.hero-summary-note{
-      font-size:11px;
-      color:#6b7280;
-      line-height:1.5;
-      margin:0;              /* 위·아래 여백 모두 0으로 */
-    }
-    .product-info-card p.hero-summary-note.hero-note-main{
-      margin-top:8px;        /* 첫 줄만 위쪽에 살짝 여백 */
-    }
-    .product-info-card p.hero-summary-note.hero-note-sub{
-      margin-top:0;          /* 두 번째 줄은 바로 붙게 */
-    }
-
-    /* FAQ / “온투업을 찾는 경우” 카드 사이 간격 */
+    /* FAQ / “온투업을 찾는 경우” 카드 간격 */
     .products-info-grid{
       gap:16px;
     }
@@ -73,16 +74,16 @@
       justify-content:center;
       padding:6px 14px;
       border-radius:999px;
-      background:#111827;      /* 검정에 가까운 진한 색 */
+      background:#111827;
       border:1px solid #111827;
-      color:#ffffff;           /* 텍스트 흰색 */
+      color:#ffffff;
       font-size:12px;
       font-weight:700;
       text-decoration:none;
       line-height:1;
     }
     .back-chip:hover{
-      background:#1f2937;      /* 살짝 더 밝은 톤으로 호버 */
+      background:#1f2937;
     }
   </style>
 </head>
@@ -127,18 +128,19 @@
 
     <!-- 히어로 영역 -->
     <section class="products-hero">
-      <!-- 히어로 내용을 하나의 카드 안에 정리 -->
       <article class="product-info-card hero-card">
-        <h1 class="hero-card__title">아파트 – 일반담보대출</h1>
+        <h2>아파트 – 일반담보대출</h2>
 
         <p class="hero-intro">
           온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
         </p>
-        <p><strong>대상고객:</strong> 은행권에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
-        <p><strong>대출한도:</strong> 1천만원 ~ 70억원</p>
-        <p><strong>대출약정:</strong> 대면 또는 비대면 (업체별 상이)</p>
-        <p><strong>대출금리:</strong> 최저 6% ~ 최대 15.5%</p>
-        <p><strong>플랫폼수수료:</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
+
+        <!-- 여기부터 항목 앞에 · 과 Ι 적용 -->
+        <p>· <strong>대상고객 Ι</strong> 은행권에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
+        <p>· <strong>대출한도 Ι</strong> 1천만원 ~ 70억원</p>
+        <p>· <strong>대출약정 Ι</strong> 대면 또는 비대면 (업체별 상이)</p>
+        <p>· <strong>대출금리 Ι</strong> 최저 6% ~ 최대 15.5%</p>
+        <p>· <strong>플랫폼수수료 Ι</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
           *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
@@ -248,8 +250,6 @@
           </p>
           <p>
             기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
-          </p>
-          <p>
             보통 아파트의 경우는 KB시세, 빌라/연립의 경우 하우스머치가 적용됩니다.
           </p>
           <p>
@@ -305,7 +305,7 @@
       </article>
     </section>
 
-    <!-- 해시태그: 계산기 안내와 뒤로가기 버튼 사이 -->
+    <!-- 해시태그 -->
     <section class="products-section">
       <div class="product-card__tags">
         <span class="product-tag">#아파트대출</span>
@@ -323,7 +323,7 @@
       </div>
     </section>
 
-    <!-- 뒤로가기 칩 버튼 (우측 정렬) -->
+    <!-- 뒤로가기 버튼 -->
     <section class="products-section">
       <div style="text-align:right;">
         <a href="/beta/products/" class="back-chip">
@@ -357,7 +357,7 @@
   </footer>
 
   <script>
-    // 베타 메뉴 토글 (허브/관리자와 동일 패턴)
+    // 베타 메뉴 토글
     document.addEventListener('DOMContentLoaded', function () {
       const toggle = document.getElementById('betaMenuToggle');
       const panel  = document.getElementById('betaMenuPanel');
