--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -136,11 +136,11 @@
         </p>
 
         <!-- 여기부터 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객 Ι</strong> 은행권에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
-        <p>· <strong>대출한도 Ι</strong> 1천만원 ~ 70억원</p>
-        <p>· <strong>대출약정 Ι</strong> 대면 또는 비대면 (업체별 상이)</p>
-        <p>· <strong>대출금리 Ι</strong> 최저 6% ~ 최대 15.5%</p>
-        <p>· <strong>플랫폼수수료 Ι</strong> 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
+        <p>· <strong>대상고객</strong> Ι 은행권에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
+        <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 70억원</p>
+        <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
+        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.5%</p>
+        <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
           *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
@@ -201,7 +201,7 @@
 
         <h3>중도상환수수료</h3>
         <ul>
-          <li>중도상환금액 × 0% ~ 1.00% (업체별 상이)</li>
+          <li>중도상환금액 × 0 ~ 1.0% (업체별 상이)</li>
         </ul>
       </article>
     </section>
@@ -211,28 +211,29 @@
       <h2 class="products-section__title">2. 온투업(P2P)담보대출을 찾는 경우는?</h2>
       <div class="products-info-grid">
         <article class="product-info-card">
-          <h3>사업·투자·세금 자금이 급할 때</h3>
+          <h3>생활비 등 가계자금이 필요할때</h3>
           <p>
-            이미 1순위 대출이 있는 상황에서 수술비, 자녀결혼비용, 사업운영자금, 세금 납부 등
-            급하게 목돈이 필요한 경우, 후순위주담대를 통해 자금을 확보하는 수요가 많습니다.
+            이미 대출이 있는 상황에서 수술비, 자녀결혼비용, 사업운영자금, 세금 납부 등
+            자금이 필요한 경우, 후순위주담대를 통해 자금을 확보하는 경우가 많습니다.
           </p>
         </article>
 
         <article class="product-info-card">
           <h3>대부업대출 대환이 필요한 경우</h3>
           <p>
-            대부업대출을 이용중에 온투업으로 <strong>대부대환대출</strong>을 고려하는 경우입니다.
+            대부업 대출을 이용중에 온투업으로 <strong>대부대환대출</strong>을 고려하는 경우입니다.
           </p>
           <p>
-            이때는 기존 대출의 각종 수수료와 <strong>중도상환수수료</strong>를 함께 비교해야 합니다.
+            이때는 대부업 대출의 <strong>중도상환수수료</strong>와 온투업 대출로 전환시 발생되는 비용 등을 함께 고려해야 합니다.
           </p>
         </article>
 
         <article class="product-info-card">
-          <h3>은행에서 대출이 안돼 곤란한 경우</h3>
+          <h3>은행에서 대출이 안되는 경우</h3>
           <p>
-            낙찰 받은 후 자금계획이 변경된 경우, 신규 임차인을 구하기 전에 기존 임차인 보증금을
-            반환해줘야 할 때, 가족·친척들과 공동소유중인 부동산에 내 지분만으로 대출을 받고 싶을 때
+            경매로 부동산을 낙찰 받은 후 은행의 한도가 부족할 경우
+            신규 임차인을 구하기 전에 기존 임차인 보증금을 반환해줘야 할 경우
+            가족·친척들과 공동소유중인 부동산에 내 지분만으로 대출을 받고 싶은 경우에
             온투업 담보대출을 고려하는 경우가 많습니다.
           </p>
         </article>
@@ -253,7 +254,7 @@
             보통 아파트의 경우는 KB시세, 빌라/연립의 경우 하우스머치가 적용됩니다.
           </p>
           <p>
-            그 외의 경우 온투업사 자체 감정을 통해 기준시세를 결정합니다.
+            그 외의 경우 각 온투업사의 자체 감정으로 기준시세를 결정합니다.
           </p>
         </article>
 
@@ -270,15 +271,11 @@
         <article class="product-info-card">
           <h3>Q. 후추의 담보대출 계산기는 얼마나 정확한가요?</h3>
           <p>
-            온투업에서 실제 취급했던 담보대출 정보를 기반으로 계산되기 때문에
-            한도 및 금리는 각 업체별로 상담을 통해 확인 가능합니다.
-          </p>
-          <p>
-            다만, <strong>대출 가능·불가능에 대한 결과는 90% 이상</strong> 정확하여
+            온투업에서 실제 취급했던 담보대출 정보를 기반으로 계산되기 때문에 <strong>대출 가능·불가능에 대한 결과는 90% 이상</strong> 정확하여
             불필요한 상담을 피할 수 있습니다.
           </p>
           <p>
-            또한 개인정보 입력 없이 간단한 정보만으로도 가능합니다.
+             또한 개인정보를 입력하지 않으므로 유출에 대한 걱정이 없으며, 간단한 정보만으로도 편리하게 이용하실 수 있습니다.
           </p>
         </article>
       </div>
@@ -288,10 +285,10 @@
     <section class="products-section">
       <h2 class="products-section__title">후추 담보대출계산기로 확인하세요.</h2>
       <article class="product-info-card">
-        <h3>대출가능여부와 한도를 먼저 체크</h3>
+        <h3>대출 승인 가능 여부와 한도를 먼저 체크</h3>
         <p>
           후추의 <strong>담보대출계산기</strong>를 이용하면
-          소유중인 부동산에 대해 대출 가능 여부를 간편하게 확인해 볼 수 있습니다.
+          소유중인 부동산에 대해 사전에 <strong>대출 승인 가능 여부를 간편하게 확인</strong>해 볼 수 있습니다.
         </p>
         <p>
           실제 온투업체에 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
