--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -132,7 +132,7 @@
         <h2>아파트 – 일반담보대출</h2>
 
         <p class="hero-intro">
-          온라인투자연계금융업 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
+          온라인투자연계금융업(이하 "온투업") 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
@@ -268,11 +268,11 @@
         <article class="product-info-card">
           <h3>Q. 담보대출 한도는 어떻게 정해지나요?</h3>
           <p>
-            기본적으로 <strong>기준시세 × 허용 LTV − 선순위 채권액</strong>으로 한도가 계산됩니다.
+           대출 한도는 <strong>기준시세 × 허용 LTV − 선순위 채권액</strong>으로 계산됩니다.
           </p>
           <p>
             기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
-            보통 아파트의 경우는 KB시세, 빌라/연립의 경우 하우스머치가 적용됩니다.
+            보통 아파트의 경우는 KB시세를 빌라/연립의 경우 하우스머치가 적용됩니다.
           </p>
           <p>
             그 외의 경우 각 온투업사의 자체 감정으로 기준시세를 결정합니다.
