--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -136,7 +136,7 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 은행권에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
+        <p>· <strong>대상고객</strong> Ι 은행에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.5%</p>
@@ -146,7 +146,7 @@
           *해당 정보는 온투업에서 취급중인 부동산 담보대출상품과 실제 대출 사례를 바탕으로 구성된 단순 정보 제공용 콘텐츠입니다.
         </p>
         <p class="hero-summary-note hero-note-sub">
-          (대출한도 등 관련 문의는 각 온투업사에 문의하세요.)
+          (대출한도 등 관련 문의는 해당 온투업사에 문의하세요.)
         </p>
       </article>
     </section>
@@ -155,18 +155,18 @@
     <section class="products-section">
       <h2 class="products-section__title">후추 담보대출계산기로 확인하세요.</h2>
       <article class="product-info-card">
-        <h3>대출 승인 가능 여부와 한도를 먼저 체크</h3>
+        <h3>대출 승인 가능성과 한도를 먼저 체크</h3>
         <p>
           후추의 <strong>담보대출계산기</strong>를 이용하면
-          소유중인 부동산에 대해 사전에 <strong>대출 승인 가능 여부를 간편하게 확인</strong>해 볼 수 있습니다.
+          소유중인 부동산에 대해 사전에 <strong>대출 승인 가능성</strong>을 간편하게 확인해 볼 수 있습니다.
         </p>
         <p>
-          실제 온투업체에 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
+          온투업체 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
           <strong>대출이 가능한 경우 49개 온투업체 중 조건에 맞는 온투업체를 확인할 수 있습니다.</strong>
         </p>
         <p style="margin-top:8px;">
           👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
-          후추 담보대출계산기 바로가기
+          후추 담보대출 계산기 바로가기
           </a>
         </p>
       </article>
@@ -252,8 +252,8 @@
         <article class="product-info-card">
           <h3>은행에서 대출이 안되는 경우</h3>
           <p>
-            경매로 부동산을 낙찰 받은 후 은행의 한도가 부족할 경우,
-            신규 임차인을 구하기 전에 기존 임차인 보증금을 반환해줘야 할 경우,
+            경매로 부동산을 낙찰 받은 후 은행의 한도가 부족할 경우/
+            신규 임차인을 구하기 전에 기존 임차인 보증금을 반환해줘야 할 경우/
             가족·친척들과 공동소유중인 부동산에 내 지분만으로 대출을 받고 싶은 경우에
             온투업 담보대출을 고려하는 경우가 많습니다.
           </p>
@@ -268,7 +268,7 @@
         <article class="product-info-card">
           <h3>Q. 담보대출 한도는 어떻게 정해지나요?</h3>
           <p>
-           대출 한도는 <strong>기준시세 × 허용 LTV − 선순위 채권액</strong>으로 계산됩니다.
+           대출 한도는 <strong>기준시세 × LTV − 선순위 채권액</strong>으로 계산됩니다.
           </p>
           <p>
             기준시세는 부동산 종류별로 각각 다른 기준이 적용됩니다.
