--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -85,6 +85,16 @@
     .back-chip:hover{
       background:#1f2937;
     }
+    /* 히어로 카드 안 항목(대상고객/대출한도...) 줄 간격 조정 */
+.hero-card p{
+  margin:0 0 3px;   /* 숫자를 줄이면 문장 사이 간격이 더 좁아짐 (예: 3px → 2px) */
+  line-height:1.5;  /* 필요하면 1.4~1.5 정도로 */
+}
+
+/* 인트로 문장은 아래 여백을 따로 유지 */
+.hero-card .hero-intro{
+  margin-bottom:14px;
+}
   </style>
 </head>
 <body class="beta-body">
@@ -132,14 +142,14 @@
         <h2>아파트 – 일반담보대출</h2>
 
         <p class="hero-intro">
-          온라인투자연계금융업(이하 "온투업") 아파트담보대출 상품 중 <strong>‘일반담보대출’ 상품</strong> 관련 정보입니다.
+          온라인투자연계금융업(이하 ‘온투업’) 아파트담보대출 상품 중 <strong>일반담보대출</strong>에 관한 정보입니다.
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
         <p>· <strong>대상고객</strong> Ι 은행에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
-        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.5%</p>
+        <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
         <p>· <strong>플랫폼수수료</strong> Ι 최소 1.7% ~ 5.0% 이내 (부가세 별도)</p>
 
         <p class="hero-summary-note hero-note-main">
@@ -158,10 +168,9 @@
         <h3>대출 승인 가능성과 한도를 먼저 체크</h3>
         <p>
           후추의 <strong>담보대출계산기</strong>를 이용하면
-          소유중인 부동산에 대해 사전에 <strong>대출 승인 가능성</strong>을 간편하게 확인해 볼 수 있습니다.
+          <strong>대출 승인 가능성</strong>을 간편하게 확인 가능합니다.
         </p>
         <p>
-          온투업체 상담 전, 대략적인 조건을 이해하는 데 도움이 되며,
           <strong>대출이 가능한 경우 49개 온투업체 중 조건에 맞는 온투업체를 확인할 수 있습니다.</strong>
         </p>
         <p style="margin-top:8px;">
@@ -216,8 +225,9 @@
         <h3>기타·부대비용</h3>
         <ul>
           <li>근저당권 설정 관련 비용</li>
-          <li>대출금 입금 시 차감 또는 이자와 함께 납부</li>
-          <li>대출심사 결과에 따라 수수료율 및 분할 납부 개월 수 차등 적용</li>
+          <li>임대차 권리조사 비용</li>
+          <li>감정비용 (시세 확인이 어려운 경우)</li>
+          <li>출장 자서비용 (대면 자서 온투업사의 경우)</li>
         </ul>
 
         <h3>중도상환수수료</h3>
