--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -209,14 +209,16 @@
         </ul>
 
         <h3>만기연장</h3>
-<ul style="margin-bottom:2px;">
-  <li>연장가능</li>
-</ul>
-<p style="font-size:12px;color:#6b7280;margin-top:0;">
-       *연장 시 담보가치 하락, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
-       연장 시 금리와 플랫폼 수수료가 변경될 수 있습니다.
-</p>
-
+        <ul style="margin-bottom:2px;">
+         <li>
+           연장가능<br>
+          <span style="font-size:12px;color:#6b7280;margin-top:0;">
+           *연장 시 담보가치 하락, 신용정보 변동 등에 따라 연장이 어려울 수 있으며,
+           연장 시 금리와 플랫폼 수수료가 변경될 수 있습니다.
+          </span>
+        </li>  
+        </ul>
+        
         <h3>플랫폼수수료</h3>
         <ul>
           <li>플랫폼 수수료: 최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
