--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -220,6 +220,7 @@
         </ul>
         
         <h3>플랫폼수수료</h3>
+        <ul style="margin-bottom:14px;">
         <ul>
           <li>플랫폼 수수료: 최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
         </ul>
@@ -234,7 +235,7 @@
 
         <h3>중도상환수수료</h3>
         <ul>
-          <li>중도상환금액 × 0 ~ 1.0% (업체별 상이)</li>
+          <li>중도상환금액 × 0% ~ 1.0% (업체별 상이)</li>
         </ul>
       </article>
     </section>
