--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -220,7 +220,7 @@
         </ul>
         
         <h3>플랫폼수수료</h3>
-         <ul>
+        <ul style="margin-bottom:14px;">
           <li>플랫폼 수수료: 최소 1.7% ~ 5.0% 이내 (부가세 별도)</li>
         </ul>
 
