--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -186,7 +186,7 @@
       <h2 class="products-section__title">1. 상세안내</h2>
       <article class="product-info-card">
         <h3>대출대상</h3>
-        <ul>
+        <ul style="margin-bottom:14px;">
           <li>만 19세 이상 내국인</li>
           <li>신용점수 (NICE) 350점 또는 (KCB) 454점 이상 고객</li>
           <li>KB시세 등재 아파트 또는 주상복합</li>
