--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -262,11 +262,11 @@
         </article>
 
         <article class="product-info-card">
-          <h3>은행에서 대출이 안되는 경우</h3>
+          <h3>은행에서 대출이 안되 경우</h3>
           <p>
-            경매로 부동산을 낙찰 받은 후 은행의 한도가 부족할 경우/
-            신규 임차인을 구하기 전에 기존 임차인 보증금을 반환해줘야 할 경우/
-            가족·친척들과 공동소유중인 부동산에 내 지분만으로 대출을 받고 싶은 경우에
+            경매로 부동산을 낙찰 받은 뒤 한도가 부족할 때,
+            신규 임차인을 구하기 전에 기존 임차인 보증금을 먼저 반환햐야 할 때,
+            가족·친척과 공동소유한 부동산에 내 지분만으로 대출을 받고 싶을 때
             온투업 담보대출을 고려하는 경우가 많습니다.
           </p>
         </article>
