--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -262,7 +262,7 @@
         </article>
 
         <article class="product-info-card">
-          <h3>은행에서 대출이 안되 경우</h3>
+          <h3>은행에서 대출이 어려운 경우</h3>
           <p>
             경매로 부동산을 낙찰 받은 뒤 한도가 부족할 때,
             신규 임차인을 구하기 전에 기존 임차인 보증금을 먼저 반환햐야 할 때,
