--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -173,15 +173,16 @@
 
     <!-- 담보대출계산기 안내: 히어로 바로 아래로 이동 -->
     <section class="products-section">
-      <h2 class="products-section__title">후추 담보대출계산기로 확인하세요.</h2>
+      <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
       <article class="product-info-card">
-        <h3>대출 승인 가능성과 한도를 먼저 체크</h3>
+        <h3>대출 승인 가능성 및 한도 체크</h3>
         <p>
-          후추의 <strong>담보대출계산기</strong>를 이용하면
-          <strong>대출 승인 가능성</strong>을 간편하게 확인 가능합니다.
+        개인정보 입력<strong>NO</strong>
+        신용점수영향<strong>NO</strong>
+        간단한 정보로도<strong>OK</strong>
         </p>
         <p>
-          <strong>대출이 가능한 경우 49개 온투업체 중 조건에 맞는 온투업체를 확인할 수 있습니다.</strong>
+         49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능
         </p>
         <p style="margin-top:8px;">
           👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
