--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -59,7 +59,7 @@
         </p>
 
         <!-- 항목 앞에 · 과 Ι 적용 -->
-        <p>· <strong>대상고객</strong> Ι 은행에서 더이상 한도가 없고, 추가 대출이 필요한 개인</p>
+        <p>· <strong>대상고객</strong> Ι 은행에서 더 이상 한도가 없고, 추가 대출이 필요한 개인</p>
         <p>· <strong>대출한도</strong> Ι 최소 1천만원 ~ 최대 70억원</p>
         <p>· <strong>대출약정</strong> Ι 대면 또는 비대면 (업체별 상이)</p>
         <p>· <strong>대출금리</strong> Ι 최저 6.7% ~ 최대 15.9%</p>
@@ -156,7 +156,7 @@
         <article class="product-info-card">
           <h3>생활비 등 가계자금이 필요할때</h3>
           <p>
-            기존 대출이 있는 상황에서 수술비, 자녀결혼비용, 사업운영자금, 세금 납부 등
+            기존 대출이 있는 상황에서 수술비, 자녀결혼비, 사업운영자금, 세금 납부 등
             자금이 필요할 때, 온투업(P2P대출)을 통해 자금을 확보하는 경우가 많습니다.
           </p>
         </article>
@@ -175,7 +175,7 @@
           <h3>은행에서 대출이 어려운 경우</h3>
           <p>
             경매로 부동산을 낙찰 받은 뒤 한도가 부족할 때,
-            신규 임차인을 구하기 전에 기존 임차인 보증금을 먼저 반환햐야 할 때,
+            신규 임차인을 구하기 전에 기존 임차인 보증금을 먼저 반환해야 할 때,
             가족·친척과 공동소유한 부동산에 내 지분만으로 대출을 받고 싶을 때
             온투업 담보대출을 고려하는 경우가 많습니다.
           </p>
