--- a/beta/products/apt-general.html
+++ b/beta/products/apt-general.html
@@ -74,24 +74,22 @@
       </article>
     </section>
 
-     <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
-    <section class="products-section">
-      <article class="product-info-card">
-        <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
-        <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
-        <ul>
-          <li>개인정보 입력 <strong>NO</strong></li>
-          <li>신용점수영향 <strong>NO</strong></li>
-          <li>간단한 정보로도 <strong>OK</strong></li>
-          <li>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</li>
-        </ul>
-        <p style="margin-top:8px;">
-          👉 <a href="/" style="color:#1d4ed8;font-weight:700;text-decoration:underline;">
-          후추 담보대출 계산기 바로가기
-          </a>
-        </p>
-      </article>
-    </section>
+   <!-- 담보대출계산기 안내: 히어로 바로 아래 -->
+<section class="products-section">
+  <article class="product-info-card">
+    <h2 class="products-section__title">후추 담보대출 계산기로 확인하세요.</h2>
+    <h3 style="margin-bottom:10px;">대출 승인 가능성 및 한도 체크 가능</h3>
+    <ul>
+      <li>개인정보 입력 <strong>NO</strong></li>
+      <li>신용점수영향 <strong>NO</strong></li>
+      <li>간단한 정보로도 <strong>OK</strong></li>
+      <li>49개 온투업체 중  <strong>맞춤 온투업체</strong> 확인 가능</li>
+    </ul>
+    <div class="product-card__buttons" style="margin-top:8px;">
+      <a href="/" class="product-btn">바로가기</a>
+    </div>
+  </article>
+</section>
 
     <!-- 1. 상세안내 -->
     <section class="products-section">
